@@ -1,3 +1,7 @@
+2017-03-11 belangeo <belangeo@gmail.com>
+
+    * Added a setKeepLast method to TableRead object (will hold last value).
+
 2017-03-10 belangeo <belangeo@gmail.com>
 
     * Added a setMode method to Selector object to switch between
